SONAR-5718 Fix clipping effect of the black header

--- a/server/sonar-web/src/main/less/issues.less
+++ b/server/sonar-web/src/main/less/issues.less
@@ -304,6 +304,10 @@
 .issues-workspace-component-viewer {
   padding: 1px 10px;
 
+  &.full-height {
+    min-height: 100vh;
+  }
+
   .code-issue-modern {
     margin: 5px 0;
   }
